@@ -1,4 +1,4 @@
 <html><body>
-Graph-theoretical algorithms.
+Graph data structures, i/o utilities and algorithms.
 </body></html>
 
